vortex-btrblocks/tests/snapshots/golden__regular__binary_low_cardinality.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: binary, len=16384, nbytes=315856
root: vortex.dict(binary, len=16384) nbytes=6196
  metadata: all_values_referenced: true
  codes: fastlanes.bitpacked(u8, len=16384) nbytes=6144
    metadata: bit_width: 3, offset: 0
    <empty>: patch_indices, patch_values, patch_chunk_offsets, validity_child
  values: vortex.varbin(binary, len=5) nbytes=52
    metadata: 
    offsets: vortex.primitive(u8, len=6) nbytes=6
      metadata: ptype: u8
      <empty>: validity
    <empty>: validity
