vortex-btrblocks/tests/snapshots/golden__regular__bool_random.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: bool, len=16384, nbytes=2048
root: vortex.bool(bool, len=16384) nbytes=2048
  metadata: offset: 0
  <empty>: validity
