vortex-btrblocks/tests/snapshots/golden__regular__decimal_prices.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: decimal(12,2), len=16384, nbytes=131072
root: vortex.decimal_byte_parts(decimal(12,2), len=16384) nbytes=49152
  metadata: 
  msp: fastlanes.bitpacked(i32, len=16384) nbytes=49152
    metadata: bit_width: 24, offset: 0
    <empty>: patch_indices, patch_values, patch_chunk_offsets, validity_child
